--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@ body {
 }
 
 .cover {
-    width: 65%;
-    height: 75%;
+    width: 3.046875vw;
+    height: 3.046875vw;
     justify-self: center;
     align-self: center;
     grid-column: 1;
     grid-row: 1;
+    aspect-ratio: 1 / 1 !important;
 }
 
 .arrow {
@@ -163,17 +164,72 @@ span {
 }
 
 @media screen and (max-width: 1200px) {
-    .cover {
-        width: 80%;
+    #results {
+        width: 40% !important;
+    }
+
+    #yeTitle {
+        font-size: 2vw !important;
+    }
+
+    #yeCover {
+        width: 3.75vw !important;
+        height: 3.75vw !important;
+    }
+
+    #songGuessautocomplete-list div {
+        font-size: 1.5vw;
+    }
+
+    .arrow {
+        font-size: 2vw;
     }
 }
 
 @media screen and (max-width: 900px) {
+
+    #songGuessautocomplete-list div {
+        font-size: 1.75vw;
+    }
+
+    #numPlayed {
+        font-size: 4vw !important;
+    }
+
+    #winPercent {
+        font-size: 4vw !important;
+    }
+
+    #playeddd {
+        font-size: 1.5vw !important;
+    }
+
+    #winName {
+        font-size: 1.5vw !important;
+    }
+
+    #statsTitle {
+        font-size: 3.5vw !important;
+    }
+
+    #playAgain {
+        font-size: 2vw !important;
+    }
+
+    #resultsworl {
+        font-size: 4vw !important;
+    }
+
+    #yeCover {
+        width: 4.75vw !important;
+        height: 4.75vw !important;
+    }
+
     #game {
         width: 70%;
     }
 
-    .trackLength, .trackNo {
+    .trackLength, .trackNo, .arrow {
         font-size: 2.5vw;
     }
 
@@ -192,14 +248,65 @@ span {
     .features {
         font-size: 1.75vw;
     }
+
+    .cover {
+        width: 4vw;
+        height: 4vw;
+    }
+
+    #results {
+        width: 50% !important;
+    }
+
+    #yeTitle {
+        font-size: 3vw !important;
+    }
 }
 
 @media screen and (max-width:600px) {
+
+    #songGuessautocomplete-list div {
+        font-size: 3vw;
+    }
+
+    #numPlayed {
+        font-size: 5.5vw !important;
+    }
+
+    #winPercent {
+        font-size: 5.5vw !important;
+    }
+
+    #playeddd {
+        font-size: 2vw !important;
+    }
+
+    #winName {
+        font-size: 2vw !important;
+    }
+
+    #statsTitle {
+        font-size: 5vw !important;
+    }
+
+    #playAgain {
+        font-size: 3vw !important;
+    }
+
+    #resultsworl {
+        font-size: 5vw !important;
+    }
+
+    #yeCover {
+        width: 7vw !important;
+        height: 7vw !important;
+    }
+
     #game {
         width: 90%;
     }
 
-    .trackLength, .trackNo {
+    .trackLength, .trackNo, .arrow {
         font-size: 3vw;
     }
 
@@ -220,12 +327,26 @@ span {
     }
 
     .cover {
-        height: 60%;
+        width: 5vw;
+        height: 5vw;
+    }
+
+    #results {
+        width: 60% !important;
+    }
+
+    #yeTitle {
+        font-size: 4vw !important;
     }
 }
 
 @media screen and (max-width:500px) {
-    .trackLength, .trackNo {
+
+    #songGuessautocomplete-list div {
+        font-size: 3.5vw;
+    }
+
+    .trackLength, .trackNo, .arrow {
         font-size: 4vw;
     }
 
@@ -245,8 +366,17 @@ span {
         font-size: 3.5vw;
     }
 
-    .cover {
-        height: 50%;
+    #results {
+        width: 70% !important;
+    }
+
+    #yeTitle {
+        font-size: 5.25vw !important;
+    }
+
+    #yeCover {
+        width: 8vw !important;
+        height: 8vw !important;
     }
 }
 
@@ -271,7 +401,7 @@ span {
     width: 100vw;
     height: 100vh;
     display: none;
-    grid-template-columns: 35% 30% 35%;
+    grid-template-columns: 100%;
     grid-template-rows: 20% 60% 20%;
     background-color: #181c2500;
 }
@@ -291,9 +421,9 @@ span {
 }
 
 #results {
-    grid-column: 2;
+    /* grid-column: 2; */
     grid-row: 2;
-    width: 100%;
+    width: 30%;
     height: 100%;
     background-color: #181c25;
     opacity: 100;
@@ -301,6 +431,7 @@ span {
     display: grid;
     grid-template-columns: 15% 70% 15%;
     grid-template-rows: 15% 15% 55% 15%;
+    justify-self: center;
 }
 
 #resultsworl {
@@ -407,8 +538,8 @@ span {
 }
 
 #yeCover {
-    width: 100%;
-    height: 100%;
+    width: 3.15vw;
+    height: 3.15vw;
     grid-row: 2;
     grid-column: 2;
     justify-self: center;
