--- a/style.css
+++ b/style.css
@@ -14,16 +14,25 @@ body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: #181c25;
 }
 
 #main {
+    z-index: 2;
     width: 100%;
     height: 90%;
     display: grid;
     grid-template-rows: 15% 10% 75% 15%;
     grid-template-columns: 100%;
-    background-color: #181c25;
+}
+
+#bgThing {
+    top: 0;
+
+    z-index: -1;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-image: radial-gradient(circle, #445472, #181c25);
 }
 
 #guess {
@@ -141,6 +150,7 @@ span {
     text-align: center;
     justify-self: center;
     align-self: flex-end;
+    text-shadow: 0.05em 0.05em #c2830d;
 }
 
 #game {
